--- a/Dasher.csproj
+++ b/Dasher.csproj
@@ -44,6 +44,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddCipherForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddCipherForm.Designer.cs">
+      <DependentUpon>AddCipherForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Base64.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -57,6 +63,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rot13.cs" />
+    <Compile Include="URL.cs" />
+    <Compile Include="XOR.cs" />
+    <EmbeddedResource Include="AddCipherForm.resx">
+      <DependentUpon>AddCipherForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -88,6 +99,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\gnome_security_medium.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\vpn-rev-encryption.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
