--- a/Dasher.csproj
+++ b/Dasher.csproj
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>Dasher.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -102,6 +105,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\vpn-rev-encryption.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\stock_lock.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\stock_lock_open.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
