--- a/Dasher.csproj
+++ b/Dasher.csproj
@@ -61,8 +61,15 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Hex.cs" />
+    <Compile Include="IAlgorithm.cs" />
     <Compile Include="IDecoder.cs" />
     <Compile Include="IEncoder.cs" />
+    <Compile Include="OperationOutputForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OperationOutputForm.Designer.cs">
+      <DependentUpon>OperationOutputForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rot13.cs" />
@@ -73,6 +80,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OperationOutputForm.resx">
+      <DependentUpon>OperationOutputForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
